--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,7 +9,7 @@ p {text-align:justify}
 
 h1 {
 	font-size:1.2em;
-	color:blue;
+	color:green;
 	font-weight:bold;
 	text-decoration:underline;
 	text-align:center;
